--- a/layout/split/split.html
+++ b/layout/split/split.html
@@ -3,6 +3,7 @@
 <html lang="en">
 	<head>
 		<title>splitter</title>
+		<link type="text/css" href="../resize/resize.css" rel="stylesheet" />
         <style type='text/css'>
             body {font-family: verdana}
             .error {border: solid 1px red;}
@@ -30,14 +31,21 @@
 			.min {
 				min-width: 100px;
 			}
+			.splitter {z-index: 1001}
         </style>
 	</head>
 	<body>
-	    <h1>Splitter</h1>
+	    <div style='display:none' id='buttons' class='buttons'>
+	    	<a href='javascript://' class="add">Add Panel</a>
+			<a href='javascript://' class="remove">Remove Last Panel</a>
+			<a href='javascript://' class="resize">Resize Parent</a>
+			<a href='javascript://' class="hide">Hide Last</a>
+	    </div>
+		<h1>Splitter</h1>
 
 		<h3>Vertical: Floating</h3>
 		<p>$(&quot;#container&quot;).mxui_layout_split({ direction: &quot;vertical&quot; });</p>
-		<div id='container' class="container">
+		<div id='container' class="container vertical-splitter">
 	    	<div class='panel' style="float:left;width:200px;">
 				Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
 	        	Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
@@ -55,15 +63,12 @@
 	    	</div>
 	    </div>
 		
-		<a href='javascript://' id="add">Add Panel</a>
-		<a href='javascript://' id="remove">Remove Last Panel</a>
-		<a href='javascript://' id="resize">Resize Parent</a>
-		<a href='javascript://' id="hide">Hide Last</a>
+		
 		
 		
 		<h3>Vertical: Absolute</h3>
 		<p>$(&quot;#container2&quot;).mxui_layout_split({ direction: &quot;vertical&quot; });</p>
-		<div id='container2' class="container">
+		<div id='container2' class="container vertical-splitter">
 	    	<div class='panel' style="width:200px;position:absolute;left:0;">
 				Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
 	        	Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
@@ -84,7 +89,7 @@
 		
 		<h3>Vertical: Absolute Min Width</h3>
 		<p>$(&quot;#container2&quot;).mxui_layout_split({ direction: &quot;vertical&quot; });</p>
-		<div id='container_min_width' class="container">
+		<div id='container_min_width' class="container vertical-splitter">
 	    	<div class='panel min' style="width:200px; position:absolute;left:0;">
 				Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
 	        	Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
@@ -102,14 +107,11 @@
 	    	</div>
 	    </div>
 		
-		<a href='javascript://' id="add2">Add Panel</a>
-		<a href='javascript://' id="remove2">Remove Last Panel</a>
-		<a href='javascript://' id="resize2">Resize Parent</a>
-		<a href='javascript://' id="hide2">Hide Last</a>
+	
 		
 		<h3>Horizontal</h3>
 		<p>$(&quot;#container3&quot;).mxui_layout_split({ direction: &quot;horizontal&quot; });</p>
-		<div id='container3' class="container">
+		<div id='container3' class="container horizontal-splitter">
 	    	<div class='panel' style="width:100%;height:200px;">
 				Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
 	        	Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
@@ -122,23 +124,20 @@
 	    	</div>
 	    </div>
 		
-		<a href='javascript://' id="add3">Add Panel</a>
-		<a href='javascript://' id="remove3">Remove Last Panel</a>
-		<a href='javascript://' id="resize3">Resize Parent</a>
-		<a href='javascript://' id="hide3">Hide Last</a>
+		
 		
 		<h3>Horizontal And Vertical</h3>
 		<p>
 			$(&quot;#container4&quot;).mxui_layout_split({ direction: &quot;vertical&quot; });</br>
 			$(&quot;#container4inside&quot;).mj_ui_split({ direction: &quot;horizontal&quot; });
 		</p>
-		<div id='container4' class="container">
+		<div id='container4' class="container vertical-splitter">
 	    	<div class='panel' style="float:left;width:200px;">
 				Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
 	        	Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
 	        	Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
 	    	</div>
-			<div class='panel' id="container4inside" style="float:left;width:200px;">
+			<div class='panel horizontal-splitter' id="container4inside" style="float:left;width:200px;">
 				<div class="panel2">
 						Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
 	        	Lorem ipsum dolor sit amet, 
@@ -152,74 +151,47 @@
 					
         <script type='text/javascript' src='../../../steal/steal.js'></script>
 		<script type='text/javascript'>
-			steal.plugins('mxui/layout/split').then(function(){
+			steal.plugins('mxui/layout/split','mxui/layout/resize').then(function(){
+				var addButtons = function(){
+					$(this).after( $('#buttons').clone().removeAttr('id').show() );
+				}
 				
-				$("#container").mxui_layout_split({ direction: "vertical" });
-				$("#container2").mxui_layout_split({ direction: "vertical" });
-				$("#container_min_width").mxui_layout_split({ direction: "vertical" });
-				$("#container3").mxui_layout_split({ direction: "horizontal" });
-				$("#container4").mxui_layout_split({ direction: "vertical" });
-				$("#container4inside").mxui_layout_split({ direction: "horizontal" });
+				$('.vertical-splitter').mxui_layout_split({ direction: "vertical", panelClass: "panel" })
+					.each(addButtons).mxui_layout_resize();
 				
-				$("#add").click(function(){
-					$("<div class='panel' id='new' style='width:150px;float:left;'>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</div>")
-						.appendTo($("#container")).trigger("insert");
-				});
 				
-				$("#add2").click(function(){
-					$("<div class='panel' style='width:150px;position:absolute;'>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</div>")
-						.appendTo($("#container2")).trigger("insert");
-				});
+				$('.horizontal-splitter').mxui_layout_split({ direction: "horizontal", panelClass: "panel" })
+					.each(addButtons).mxui_layout_resize();
 				
-				$("#add3").click(function(){
-					$("<div class='panel' style='width:100%;height:100px'>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</div>")
-						.appendTo($("#container3")).trigger("insert");
-				});
 				
-				$('#remove').click(function(){
-					$("#container").find('.panel:last').trigger('remove');
-				});
-				
-				$('#remove2').click(function(){
-					$("#container2").find('.panel:last').trigger('remove');
-				});
-				
-				$('#remove3').click(function(){
-					$("#container3").find('.panel:last').trigger('remove');
-				});
-				
-				var grow = true;
-				$("#resize").click(function(){
-					if(grow){
-						grow = false;
-						$("#container").height(600).width(500).trigger("resize");
-					}else{
-						grow = true;
-						$("#container").height(400).width(300).trigger("resize");
+				$(document.body).delegate("a","click", function(){
+					var action = this.className,
+						container = $(this).parent().prev();
+					
+					switch(action){
+						case "add" : 
+							$("<div class='panel' style='width:150px;float:left;'>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</div>")
+								.appendTo(container).trigger("insert");
+							break;
+						case "remove" : 
+							container.find('.panel:last').trigger('remove');
+							break;
+						case "resize" : 
+							var grow = container.height() !== 600;
+						
+							if(grow){
+								container.height(600).width(500).trigger("resize");
+							}else{
+								container.height(400).width(300).trigger("resize");
+							}
+							break;
+						case "hide" : 
+							hidething($(ev.target), container);
+							break;
 					}
-				});	
-								
-				var grow2 = true;
-				$("#resize2").click(function(){
-					if(grow2){
-						grow2 = false;
-						$("#container2").height(600).width(500).trigger("resize");
-					}else{
-						grow2 = true;
-						$("#container2").height(400).width(300).trigger("resize");
-					}
-				});	
+				})
 				
-				var grow3 = true;
-				$("#resize3").click(function(){
-					if(grow3){
-						grow3 = false;
-						$("#container3").height(600).width(500).trigger("resize");
-					}else{
-						grow3 = true;
-						$("#container3").height(400).width(300).trigger("resize");
-					}
-				});	
+				
 				
 				function hidething(elm, container)
 				{
@@ -233,20 +205,6 @@
 					}
 				}
 				
-				$('#hide').click(function(ev)
-				{	
-					hidething($(ev.target), $('#container'));
-				});
-				
-				$('#hide2').click(function(ev)
-				{
-					hidething($(ev.target), $('#container2'));
-				});
-				
-				$('#hide3').click(function(ev)
-				{
-					hidething($(ev.target), $('#container3'));
-				});
 			
 			}).start();
 		</script>
