lots of tests and goodness

--- a/layout/fill/fill.html
+++ b/layout/fill/fill.html
@@ -133,7 +133,7 @@
         src='../../../steal/steal.js'>   
 </script>
 <script type='text/javascript' id="demo-source">
-	steal.plugins('mxui/layout/filler','mxui/layout/resize').then(function(){
+	steal.plugins('mxui/layout/fill','mxui/layout/resize').then(function(){
 		$(function(){
 			var out = [], affects= jQuery.support.containerSizeAdjustments;
 			for (var part in affects) {
