--- a/layout/resize/resize.html
+++ b/layout/resize/resize.html
@@ -46,7 +46,7 @@
 					<button type='button'  class='wrap'>try me</button>
 				</td>
 				<td>
-					<img src='http://cdn.javascriptmvc.com/jmvc/plugins/documentation/app/images/video.png'  
+					<img src='../../../jmvc/images/phui.png'  
 							class='wrap'
 							style="border: solid 1px black"/>
 				</td>
@@ -56,13 +56,13 @@
 		
 		
 		<script type='text/javascript' 
-                src='../../steal/steal.js?steal[app]=mxui/resizable&steal[env]=development'
+                src='../../../steal/steal.js?mxui/layout/resize'
                 package='main.js'
                 compress='false'>   
         </script>
 		<script type='text/javascript'>
 			$(function(){
-				$('.wrap').mxui_resizable()
+				$('.wrap').mxui_layout_resize()
 			})
 		</script>
 	</body>
