--- a/layout/split/split.html
+++ b/layout/split/split.html
@@ -32,6 +32,10 @@
 				min-width: 100px;
 			}
 			.splitter {z-index: 1001}
+			
+			#container.mxui_layout_split .vsplitter {
+				width: 10px;
+			}
         </style>
 	</head>
 	<body>
