--- a/layout/wrap/wrap.html
+++ b/layout/wrap/wrap.html
@@ -8,6 +8,10 @@
             .error {border: solid 1px red;}
             .error_text { color: red; font-size: 10px;}
             td {padding: 3px;}
+			
+			.wrap {
+				margin: 20px;
+			}
         </style>
 	</head>
 	<body>
@@ -16,7 +20,7 @@
 		<input class='wrap' type='text'/>
 		<select  class='wrap'><option>1</option></select>
 		<button type='button'  class='wrap'>try me</button>
-		<img src='http://cdn.javascriptmvc.com/jmvc/plugins/documentation/app/images/video.png'  class='wrap'/>
+		<img src='../../../jmvc/images/phui.png'  class='wrap'/>
 
 		<script type='text/javascript' 
                 src='../../../steal/steal.js?mxui/layout/wrap'>   
