--- a/layout/sortable/funcunit.html
+++ b/layout/sortable/funcunit.html
@@ -1,13 +1,13 @@
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="../../funcunit/qunit/qunit.css" />
+        <link rel="stylesheet" type="text/css" href="../../../funcunit/qunit/qunit.css" />
         <title>FuncUnit Test</title>
         <style>
             body  {
                 margin: 0px; padding: 0px;
             }
         </style>
-		<script type='text/javascript' src='../../steal/steal.js?steal[app]=mxui/sortable/test/funcunit'></script>
+		<script type='text/javascript' src='../../../steal/steal.js?mxui/layout/sortable/sortable_test.js'></script>
     </head>
     <body>
 
