--- a/layout/split/funcunit.html
+++ b/layout/split/funcunit.html
@@ -4,7 +4,7 @@
      	<meta http-equiv="X-UA-Compatible" content="IE=edge" >
 	    <link rel="stylesheet" type="text/css" href="../../../funcunit/qunit/qunit.css" />
         <title>split FuncUnit Test</title>
-		<script type='text/javascript' src='../../../steal/steal.js?mxui/layout/split/test/funcunit'></script>
+		<script type='text/javascript' src='../../../steal/steal.js?mxui/layout/split/split_test.js'></script>
     </head>
     <body>
 
