--- a/layout/wrap/qunit.html
+++ b/layout/wrap/qunit.html
@@ -1,15 +1,15 @@
 <html>
     <head>
         <link rel="stylesheet" type="text/css" href="../../../funcunit/qunit/qunit.css" />
-        <title>split QUnit Test</title>
+        <title>selection QUnit Test</title>
 		<script type='text/javascript'>
 			steal = {ignoreControllers: true}
 		</script>
-		<script type='text/javascript' src='../../../steal/steal.js?mxui/layout/split/test/qunit'></script>
+		<script type='text/javascript' src='../../../steal/steal.js?mxui/layout/wrap/wrap_test.js'></script>
     </head>
     <body>
 
-        <h1 id="qunit-header">split Test Suite</h1>
+        <h1 id="qunit-header">wrap Test Suite</h1>
     	<h2 id="qunit-banner"></h2>
     	<div id="qunit-testrunner-toolbar"></div>
     	<h2 id="qunit-userAgent"></h2>
