--- a/layout/fill/fill2.html
+++ b/layout/fill/fill2.html
@@ -19,7 +19,7 @@
 				
 			}
         </style>
-		<link type="text/css" href="../data/grid/grid.css" rel="stylesheet" />
+		<link type="text/css" href="../../data/grid/grid.css" rel="stylesheet" />
 	</head>
 	<body>
 		
