--- a/layout/split/split.css
+++ b/layout/split/split.css
@@ -24,7 +24,7 @@
 	font-size: 0px;
 	border-top:solid 1px #b6b6b6;
 	border-bottom:solid 1px #b6b6b6;
-	background:url(images/split_sprite.gif) repeat-y -79px 0;
+	background:url(images/split_sprite.gif) repeat-y -80px 0;
 }
 .mxui_layout_split .hsplitter 
 {
@@ -39,6 +39,11 @@
 .mxui_layout_split .split-hover
 {
 	background:#5f83b9;
+}
+.mxui_layout_split .disabled.vsplitter,
+.mxui_layout_split .disabled.hsplitter
+{
+	background:red;
 }
 .mxui_layout_split .vsplitter .collapser
 {
