--- a/layout/resizer/resizer.html
+++ b/layout/resizer/resizer.html
@@ -25,18 +25,44 @@
 	</head>
 	<body>
 	    <table id='resizer' width='100%'>
-	    	<tr>
-	    		<th><span>One</span></th>
-				<th><span>Two</span></th>
-				<th><span>Three</span></th>
-				<th><span>Four</span></th>
-	    	</tr>
+	    	<col />
+			<col />
+			<col />
+			<col />
+	    	<thead>
+		    	<tr>
+		    		<th><span>One</span></th>
+					<th><span>Two</span></th>
+					<th><span>Three</span></th>
+					<th><span>Four</span></th>
+		    	</tr>
+	    	</thead>
+	    	<tbody id='body'>
+	    		
+	    		<tr>
+		    		<td>abc</td>
+					<td>def</td>
+					<td>abc</td>
+					<td>def</td>
+		    	</tr>
+	    	</tbody>
 	    </table>
 		<script type='text/javascript' 
                 src='../../../steal/steal.js?mxui/layout/resizer,development'>   
         </script>
 		<script type='text/javascript'>
-			$("#resizer").mxui_layout_resizer();
+			var body = $('#body'),
+				start,
+				col,
+				width;
+			$("#resizer").mxui_layout_resizer().bind("size:start", function(ev, distance){
+				start = distance
+				col = $("#resizer").find('col:eq('+$('th').index(ev.target)+')');
+				width = $(ev.target).width();
+			}).bind("size", function(ev, delta){
+				col.width(width+start+delta)
+				console.log(width, delta, start)
+			});
 		</script>
 	</body>
 </html>
