--- a/layout/table_scroll/table_scroll.html
+++ b/layout/table_scroll/table_scroll.html
@@ -86,7 +86,9 @@
 			body.html(html.join(''));
 			var els;
 			$('#scrollable').click(function(){
-				$('#table').mxui_layout_table_scroll();
+				$('#table').mxui_layout_table_scroll({
+					filler:true
+				});
 				els = $('.mxui_layout_table_scroll').controller(Mxui.Layout.TableScroll).elements()
 			})
 			
