--- a/layout/fill/fill.html
+++ b/layout/fill/fill.html
@@ -152,6 +152,9 @@
         src='../../../steal/steal.js'>   
 </script>
 <script type='text/javascript' id="demo-source">
+	// document.addEventListener('click', function(){
+		// console.log('CLICK not in app')
+	// }, false)
 	steal('mxui/layout/fill','mxui/layout/resize').then(function(){
 		$(function(){
 			var out = [], affects= jQuery.support.containerSizeAdjustments;
@@ -163,7 +166,10 @@
 			})
 			$("#log").html(out.join(", "))
 		});
+		// console.log('ADDING CLICK')
+		steal.clickReg = true;
 		$("#run").click(function(){
+			// console.log('HERE')
 			$(".container").each(function(){
 				$(this).find(".fill").mxui_layout_fill({
 					parent: $(this),
