some minor docs

--- a/layout/fill/fill.html
+++ b/layout/fill/fill.html
@@ -182,9 +182,7 @@
 			//$("#myloggin")[0].scrollTop = $("#myloggin")[0].scrollHeight
 		}
 		$('#scrollfill').click(function(){
-			$('#fillthis').mxui_layout_fill({
-					parent: $("#scrollable")
-				})
+			$('#fillthis').mxui_layout_fill("#scrollable")
 		})
 		/**/
 		/*$("#nestedFiller2").mxui_filler({
