Added vertical sorting to sortable (along with vertical sorting tests)

--- a/layout/sortable/sortable.html
+++ b/layout/sortable/sortable.html
@@ -13,11 +13,18 @@
 				border: dashed 2px red;
 				padding: 5px;
 			}
+			#sortable3 .sortable {
+				float: none;
+			}
 			#sortable,
 			#sortable2 {
 				border: solid 1px green;
 				padding: 5px;
-				
+			}
+			#sortable3 {
+				border: solid 1px green;
+				padding: 5px;
+				width: 200px;
 			}
 			.ui-helper-clearfix:after {
 				clear:both;
@@ -44,6 +51,11 @@
 				width: 200px;
 				border: dotted 2px blue;
 			}
+			.verticalDrag {
+				width: 190px;
+				padding: 5px;
+				border: dotted 2px orange;
+			}
         </style>
 	</head>
 	<body>
@@ -57,6 +69,7 @@
 		<div class='somethingElse' id='drag'>SOMETHING ELSE</div>
 		<div id='away'>away</div>
 		<br/><br/><br/>
+		
 		<div id='sortable2' class='ui-helper-clearfix'>
 			<div class='sortable'>First</div>
 			<div class='sortable'>Second</div>
@@ -66,6 +79,16 @@
 		<div class='groupParent' id='groupDrag'>GROUP DRAG PARENT</div>
 		<div class='groupChild'>GROUP CHILD 1</div>
 		<div class='groupChild'>GROUP CHILD 2</div>
+		<br/><br/><br/>
+		
+		<div id='sortable3' class='ui-helper-clearfix'>
+			<div class='sortable'>First</div>
+			<div class='sortable'>Second</div>
+			<div class='sortable'>Third</div>
+		</div>
+		<br/>
+		<div class='verticalDrag' id='vertDrag'>GO VERTICAL</div>
+		
 		<script type='text/javascript' 
                 src='../../../steal/steal.js'>   
         </script>
@@ -91,8 +114,15 @@
 				}).bind("sortable.addPlaceholder", function(){
 					$(document.body).append("<p>added placeholder</p>")
 				})
+				$("#sortable3").mxui_layout_sortable({
+					direction: 'vertical'
+				}).bind("sortable.addPlaceholder", function(){
+					$(document.body).append("<p>added placeholder</p>")
+				})
+				
 				$(".somethingElse").bind("draginit",function(){})
 				$(".groupParent").bind("draginit",function(){})
+				$(".verticalDrag").bind("draginit",function(){})
 			})
 			
 		</script>
